kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: celloscope 
  name: celloscope
  labels:
    app: celloscope
spec:
  ports:
  - port: 80
    targetPort: 3838 
  selector:
    app: celloscope
